# tstack

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BATCH2_ENRICHMENT_REPORT.md  BATCH3_ENRICHMENT_REPORT.md  BATCH4_ENRICHMENT_REPORT.md  CHANGELOG.md  DEPENDENCY_ENRICHMENT_REPORT.md  GOVERNANCE_AUTOMATION.md  GOVERNANCE_ENGINE_COMPLETION_SUMMARY.md  GOVERNANCE_ENGINE_INSTALL.md  GOVERNANCE_ENRICHMENT_PROGRESS.md  GOVERNANCE_EXCEPTIONS.md  GOVERNANCE_MANIFESTS_REPORT.md  GOVERNANCE_QUICK_REF.md  MANUAL_ENRICHMENT_REPORT.md  README.md  REPO_CHANGE_GOVERNANCE_WORKFLOW.md  SKILL.md  SPEC.md  TMPL.md  example-governance-manifest.yaml  governance-component-manifest.schema.json  governance-spec.yaml  governance.config.json  package-lock.json  package.json
.github/workflows/: agent-dispatch.yml.disabled  ci.yml  ci.yml.disabled
agent-architecture/: .codebaseignore  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  DIAGRAM-SKILLS-SETUP.md  GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  SPEC.md  package-lock.json  package.json  playwright.config.mjs
agent-architecture/.claude-plugin/: marketplace.json
agent-architecture/.cursor-plugin/: marketplace.json
agent-architecture/adapter-ag-ui/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml
agent-architecture/adapter-agentcore/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml
agent-architecture/adapter-codegraph/: SKILL.md  SKILL.md.tmpl
agent-architecture/adapter-databricks/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/adapter-docker-mcp/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml
agent-architecture/adapter-github/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml
agent-architecture/adapter-google-adk/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/adapter-langgraph/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml
agent-architecture/adapter-mcp/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml
agent-architecture/adapter-openapi/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml
agent-architecture/adapter-ponytail/: SKILL.md  SKILL.md.tmpl
agent-architecture/adapter-seniorswe-concise/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  pyproject.toml
agent-architecture/adapter-strands/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/adapters/: registry.json
agent-architecture/adapters/adapter-seniorswe-concise/: pyproject.toml
agent-architecture/agents/: routing.json
agent-architecture/architecture-agent-upgrade/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/atlassian-docs/: GOVERNANCE.yaml  SKILL.md  SKILL.md.tmpl
agent-architecture/atlassian-docs/mcp/: README.md  pyproject.toml
agent-architecture/atlassian-docs/mcp/src/jira_mcp_server/: client.py
agent-architecture/atlassian-docs/mcp/src/mcp_atlassian_agent/: __init__.py
agent-architecture/autoplan/: README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/benchmark/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/brainstorming/: README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/canary/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/careful/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/change-router/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/chrome-devtools/: SKILL.md  SKILL.md.tmpl
agent-architecture/claude/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl
agent-architecture/codebase-engine/: GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  SPEC.md  architecture.md  pyproject.toml
agent-architecture/codebase-out/: GRAPH_REPORT.md
agent-architecture/codebase-understander/: SKILL.md  (+1 more)
agent-architecture/diagram-cloudformation/: GOVERNANCE.yaml  README.md  SKILL.md  pyproject.toml
agent-architecture/diagram-cloudformation/tests/: test_diagram_cloudformation.py
agent-architecture/diagram-helm/: GOVERNANCE.yaml  SKILL.md  pyproject.toml  server.py
agent-architecture/diagram-helm/tests/: __init__.py  test_diagram_helm.py
agent-architecture/diagram-iac/: GOVERNANCE.yaml  README.md  SKILL.md  pyproject.toml
agent-architecture/diagram-iac/tests/: __init__.py  test_diagram_iac.py
agent-architecture/diagram-infrastructure/: GOVERNANCE.yaml  README.md  SKILL.md  pyproject.toml  server.py
agent-architecture/diagram-infrastructure/tests/: __init__.py  test_diagram_infrastructure.py
agent-architecture/qa-verify/: GOVERNANCE.yaml  pyproject.toml  qa_verify.py
agent-pack/: .agent-config.example.json  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  DIAGRAM-SKILLS-SETUP.md  GOVERNANCE.yaml  README.md  SKILL.md  SKILL.md.tmpl  SPEC.md  package-lock.json  package.json
agent-pack/tool-providers/atlassian-docs/mcp/: pyproject.toml
agent-pack/tool-providers/atlassian-docs/mcp/src/bitbucket_mcp_server/: server.py
agent-pack/tool-providers/atlassian-docs/mcp/src/confluence_mcp_server/: server.py
agent-pack/tool-providers/atlassian-docs/mcp/src/jira_mcp_server/: server.py
agent-pack/tool-providers/diagram-iac/: GOVERNANCE.yaml  README.md  pyproject.toml
docs/: ARCHITECTURE_SPLIT.md  CONFLUENCE_ENV.md  DOCS_INDEX.md  INSTALLATION.md  MCP_INTEGRATION.md  NEXT_STEPS.md  OPUS47_HANDOFF.md  PLATFORM_BLUEPRINT.md  REPO_ORGANIZATION.md  SKILL_INVOCATION.md  START_HERE.md  VERIFICATION.md  WORKFLOWS.md
examples/: governance-check.sh
graphify-out/: .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  manifest.json
scripts/: build-governance.js  check-governance.js  enrich-batch3.js  enrich-batch4.js  enrich-batch5.js  enrich-dependencies.js  enrich-used-by.js  export-agent-registry.js  generate-governance-files.js  governance-lib.js
tests/: export-agent-registry.test.js  governance-cli.test.js  governance-internals.test.js  governance-lib.test.js  governance.test.js  plugin-boundary.test.js
(+1350 files in other folders)
