[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagram-helm"
version = "0.1.0"
description = "Kubernetes Helm chart visualization via diagram-infrastructure"
requires-python = ">=3.8"
license = "Apache-2.0"

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]


[tool.setuptools]
packages = []
