[project]
name = "mcp-atlassian-agent"
version = "0.1.0"
description = "mcp-atlassian connector package for architecture-agent"
requires-python = ">=3.10"
dependencies = [
    "mcp-atlassian>=0.9.0",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
docker = [
    "docker>=7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mcp-atlassian-agent = "mcp_atlassian_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_atlassian_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
