[project]
name = "mcp-atlassian-agent"
version = "0.2.1"
description = "Jira, Confluence, and Bitbucket FastMCP servers for agent-pack"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mcp-jira = "jira_mcp_server.server:main"
mcp-confluence = "confluence_mcp_server.server:main"
mcp-bitbucket = "bitbucket_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mcp_atlassian_agent",
    "src/jira_mcp_server",
    "src/confluence_mcp_server",
    "src/bitbucket_mcp_server",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
